# playhub

./: .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml
accounts/: choices.py  managers.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: login.html
app/: apps.py  urls.py  views.py
app/templates/: index.html
config/: template.py  urls.py
config/settings/: production.py  settings.py
docker/development/: docker-compose.yaml
statics/: package.json
statics/assets/js/: main.js
statics/assets/json/: search-horizontal.json  search-vertical.json  user-profile.json
statics/assets/json/locales/: de.json  fr.json  pt.json
statics/js/: template-customizer.js
statics/libs/@form-validation/umd/core/: index.min.js
statics/libs/@form-validation/umd/plugin-alias/: index.min.js
statics/libs/@form-validation/umd/plugin-aria/: index.min.js
statics/libs/@form-validation/umd/plugin-bootstrap/: index.min.js
statics/libs/@form-validation/umd/plugin-bootstrap3/: index.min.js
statics/libs/@form-validation/umd/plugin-bulma/: index.min.js
statics/libs/@form-validation/umd/plugin-excluded/: index.min.js
templates/layout/: master.html
templates/layout/bootstrap/: layout_blank.py  layout_front.py  layout_horizontal.py  layout_vertical.py  system.py
templates/layout/partials/: scripts.html  scripts_front.html  scripts_includes.html  scripts_includes_front.html
templates/layout/partials/navbar/: navbar.html
utility/form/mixin/: __init__.py  layout.py
utility/model/: __init__.py  base_model.py
utility/template/: layout.py  theme.py
(+45 files in other folders)
